--- a/docs/CSS/index.css
+++ b/docs/CSS/index.css
@@ -1,4 +1,5 @@
 body{
+  background: linear-gradient(to top, #f6f6f6, #FFF);
   width: 100%;
   height: 100%;
   display: flex;
@@ -6,11 +7,43 @@ body{
 }
 
 .sidebar{
-  
+  height: 100vh;
+  width: 15%;
 }
+
+.sns{
+  padding: 0 11px;
+}
+
+.contents{
+  height: 100vh;
+  background-color: #FFF;
+  border: 1px solid #a7d7f9;
+  margin: 40px 5px 5px 0;
+  width: 100%;
+}
+
+.main{
+  margin: 20px 5px 0px 24px;
+  width: 85%;
+}
+
+h1{
+  color: #000000;
+  font-size: 30px;
+  margin: 0 0 7.2px;
+  border-bottom: solid 1px;
+  display: block;
+  width: 80vw;
+}
+
 .logo{
   height: 160px;
   width: 160px;
   margin: 0px;
   padding: 10px;
+}
+
+.source{
+
 }
