--- a/docs/CSS/index.css
+++ b/docs/CSS/index.css
@@ -1,17 +1,22 @@
 body{
-  background: linear-gradient(to top, #f6f6f6, #FFF);
-  width: 100%;
-  height: 100%;
+  font-size: 100%;
+  font-family: sans-serif;
+  /* background: linear-gradient(to top, #f6f6f6, #FFFFFF); */
+  width: 100vw;
+  height: 100h;
   display: flex;
   justify-content: center;
 }
 
 .sidebar{
   height: 100vh;
-  width: 15%;
+  width: 15vw;
+  padding-left: 0.5em;
 }
 
-.sns{
+.link{
+  font-size: 12px;
+  color: #0b0080;
   padding: 0 11px;
 }
 
@@ -20,7 +25,7 @@ body{
   background-color: #FFF;
   border: 1px solid #a7d7f9;
   margin: 40px 5px 5px 0;
-  width: 100%;
+  width: 100vw;
 }
 
 .main{
@@ -37,13 +42,21 @@ h1{
   width: 80vw;
 }
 
-.logo{
-  height: 160px;
-  width: 160px;
-  margin: 0px;
-  padding: 10px;
+p{
+  font-size: 15px;
 }
 
 .source{
+  margin-bottom: 17px;
+}
 
+a{
+  text-decoration: none;
+}
+
+.logo{
+  height: 130px;
+  width: 130px;
+  margin: 0px;
+  padding: 10px 10px 20px 10px;
 }
