--- a/CSS/my-bootstrap.css
+++ b/CSS/my-bootstrap.css
@@ -10,6 +10,10 @@
   border: 1px solid #a7d7f9 !important;
 }
 
+/* .border-dark{
+  border-bottom-color: rgb(162, 169, 177);
+} */
+
 /* テスト用 ページが完成したら消す。 */
 /* .side{
   background-color: blue;
