--- a/CSS/my-bootstrap.css
+++ b/CSS/my-bootstrap.css
@@ -10,15 +10,6 @@
   border: 1px solid #a7d7f9 !important;
 }
 
-/* .border-dark{
-  border-bottom-color: rgb(162, 169, 177);
-} */
-
-/* テスト用 ページが完成したら消す。 */
-/* .side{
-  background-color: blue;
+.right-background{
+  background-color: #f0e68c;
 }
-
-.main{
-  background-color: pink;
-} */
