--- a/CSS/my-bootstrap.css
+++ b/CSS/my-bootstrap.css
@@ -1,3 +1,7 @@
+body {
+  font-family: sans-serif ;
+}
+
 .container{
   max-width: 100%;
 }
@@ -12,4 +16,8 @@
 
 .right-background{
   background-color: #f0e68c;
+}
+
+.mainbox{
+  width: 95%;
 }
