--- a/CSS/my-bootstrap.css
+++ b/CSS/my-bootstrap.css
@@ -21,3 +21,19 @@ body {
 .mainbox{
   width: 95%;
 }
+
+.indexcolor{
+  text-decoration: none;
+}
+
+.indexcolor:link{
+  color: #0645ad;
+}
+
+.indexcolor:visited{
+  color: #0B0080;
+}
+
+.indexcolor:hover{
+  text-decoration:underline;
+}
